--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.css
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.css
@@ -6,8 +6,8 @@
     font-size: 12px;
     line-height: 1.428571429;
     border-radius: 15px;
-  }
+}
 
-  .selected{
-    background-color: #ececec;
-  }
+.selected {
+    background-color: #757474;
+}
