--- a/front-end/tutorial-canciones/src/app/album/album-create/album-create.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-create/album-create.component.html
@@ -1,120 +1,91 @@
-<app-header></app-header>
-<div class="container">
-  <div class="row justify-content-center">
-    <div class="col-10">
-      <div class="card mx-3 my-5">
-        <div class="row">
-          <div class="col-12 text-center">
-            <p class="mt-5 mb-2 fs-3 fw-bold">Crear Álbum</p>
-          </div>
-        </div>
-        <form class="mx-5 my-3" [formGroup]="albumForm" (ngSubmit)="createAlbum(albumForm.value)">
+<h1 class="p-3" style="text-align: center;">Crear Álbum</h1>
 
-          <div class="form-group my-2">
-            <div class="row">
-              <div class="col-2 text-start">
-                <label for="titulo">Título </label>
-              </div>
-              <div class="col-10">
-                <input type="text" class="form-control" formControlName="titulo" placeholder="Titulo del album">
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-8">
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('titulo')?.hasError('required') && albumForm.get('titulo')?.touched">
-                  Debe ingresar un título para el álbum
-                </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('titulo')?.hasError('minlength')">
-                  El título debe tener por lo menos un carácter
-                </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('titulo')?.hasError('maxlength')">
-                  El título no debe exceder los 128 carácteres
-                </div>
-              </div>
-            </div>
-          </div>
-        
-          <div class="form-group my-2">
-            <div class="row">
-              <div class="col-2 text-start">
-                <label for="anio">Año </label>
-              </div>
-              <div class="col-10">
-                <input type="text" class="form-control" formControlName="anio" placeholder="Año de lanzamiento">
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-8">
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('anio')?.hasError('required') && albumForm.get('anio')?.touched">
-                  Debe ingresar un año para el álbum
-                </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('anio')?.hasError('minlength')">
-                  El año debe tener 4 números
-                </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('anio')?.hasError('maxlength')">
-                  El año debe tener 4 números
-                </div>
-              </div>
-            </div>
-          </div>
 
-          <div class="form-group my-2">
-            <div class=" row">
-              <div class="col-2 text-start">
-                <label for="medio">Medio </label>
-              </div>
-              <div class="col-10">
-                <select class="form-select" formControlName="medio">
-                  <option value="" disabled>Selecciona el medio del álbum</option>
-                  <option *ngFor="let medio of medios" value={{medio.llave}}>{{medio.llave}}</option>
-                </select>
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-8">
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('medio')?.hasError('required') && albumForm.get('medio')?.touched">
-                  Debe seleccionar el medio del álbum
-                </div>
-              </div>
-            </div>
-          </div>
+<div fxLayout="row" fxLayoutGap="40px" fxLayout.xs="column" fxLayoutAlign="center center">
+    <div fxFlex="60" fxLayout="column">
 
-          <div class="form-group my-2">
-            <div class="row">
-              <div class="col-2 text-start">
-                <label for="descripcion">Descripción </label>
-              </div>
-              <div class="col-10">
-                <textarea class=" form-control" formControlName="descripcion" placeholder="Descripción del álbum"></textarea>
-              </div>
-            </div>
-            <div class="row justify-content-center">
-              <div class="col-8">
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('descripcion')?.hasError('required') && albumForm.get('descripcion')?.touched">
-                  Debe ingresar una descripción para el álbum
-                </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('descripcion')?.hasError('minlength')">
-                  La descripción del álbum debe tener por lo menos un carácter
-                </div>
-                <div class="alert alert-danger my-3" *ngIf="albumForm.get('descripcion')?.hasError('maxlength')">
-                  La descripción del álbum no debe superar los 512 carácteres
-                </div>
-              </div>
-            </div>
-          </div>
-          
-          <div class="row mt-4">
-            <div class="col-6 text-end">
-              <button class="btn btn-danger" (click)="cancelCreate()">Cancelar</button>
-            </div>
-            <div class="col-6 text-start">
-              <button type="submit" class="btn btn-primary" [disabled]="!albumForm.valid">Crear</button>
-            </div>
-          </div>
+        <form (ngSubmit)="createAlbum(albumForm.value)" autocomplete="off" [formGroup]="albumForm">
 
+            <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+                <mat-form-field fxFlex="100" fxLayout.xs="column">
+                    <mat-label>Título</mat-label>
+                    <input matInput type="text" formControlName="titulo" placeholder="Titulo del album" placeholder id="input_titulo">
+                    <span class="form-text text-danger" *ngIf="albumForm.get('titulo')?.hasError('required') && albumForm.get('titulo')?.touched">
+                        Debe ingresar un título para el álbum
+                    </span>
+                    <span class="form-text text-danger" *ngIf="albumForm.get('titulo')?.hasError('minlength')">
+                        El título debe tener por lo menos un carácter
+                    </span>
+                    <span class="form-text text-danger" *ngIf="albumForm.get('titulo')?.hasError('maxlength')">
+                        El título no debe exceder los 128 carácteres
+                    </span>
+                </mat-form-field>
+            </div>
+
+            <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+                <mat-form-field fxFlex="100" fxLayout.xs="column">
+                    <mat-label>Año</mat-label>
+                    <input matInput type="text" formControlName="anio" placeholder="Año de lanzamiento" placeholder id="input_anio">
+                    <span class="form-text text-danger" *ngIf="albumForm.get('anio')?.hasError('required') && albumForm.get('anio')?.touched">
+                        Debe ingresar un año para el álbum
+                    </span>
+                    <span class="form-text text-danger" *ngIf="albumForm.get('anio')?.hasError('minlength')">
+                        El año debe tener 4 números
+                    </span>
+                    <span class="form-text text-danger" *ngIf="albumForm.get('anio')?.hasError('maxlength')">
+                        El año debe tener 4 números
+                    </span>
+                </mat-form-field>
+            </div>
+
+
+            <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+                <mat-form-field fxFlex="60" appearance="fill" id="select_medio">
+                    <mat-label>Medio</mat-label>
+                    <mat-select formControlName="medio">
+                        <mat-option value="" disabled>Selecciona el medio del álbum</mat-option>
+                        <mat-option *ngFor="let medio of medios" value={{medio.llave}}>{{medio.llave}}</mat-option>
+                    </mat-select>
+                    <span class="form-text text-danger" *ngIf="albumForm.get('medio')?.hasError('required') && albumForm.get('medio')?.touched">
+                        Debe seleccionar el medio del álbum
+                    </span>
+                </mat-form-field>
+            </div>
+
+
+            <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+                <mat-form-field fxFlex="100" appearance="fill">
+                    <mat-label>Descripción</mat-label>
+                    <textarea matInput formControlName="descripcion" placeholder="Descripción del álbum"></textarea>
+                    <span class="form-text text-danger" *ngIf="albumForm.get('descripcion')?.hasError('required') && albumForm.get('descripcion')?.touched">
+                        Debe ingresar una descripción para el álbum
+                    </span>
+                    <span class="form-text text-danger" *ngIf="albumForm.get('descripcion')?.hasError('minlength')">
+                        La descripción del álbum debe tener por lo menos un carácter
+                    </span>
+                    <span class="form-text text-danger" *ngIf="albumForm.get('descripcion')?.hasError('maxlength')">
+                        La descripción del álbum no debe superar los 512 carácteres
+                    </span>
+                </mat-form-field>
+            </div>
+
+            <br>
+
+            <div fxLayout class="button-row">
+                <button mat-raised-button color="primary" type="submit" [disabled]="!albumForm.valid">
+                    <mat-icon>save</mat-icon>
+                    Crear
+                </button>
+
+                <button mat-raised-button (click)="cancelCreate()">
+                    <mat-icon>cancel</mat-icon>
+                    Cancelar
+                </button>
+            </div>
 
         </form>
-      </div>
+
     </div>
-  </div>
+
+
 </div>
