--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
@@ -1,38 +1,51 @@
-<app-header></app-header>
 <div class="container my-4">
-  <div class="row">
-    <div class="col-4">
-      <div class="card">
-        <div class="card-header">
-          <div class="row">
-            <div class="col-10 text-center">
-              <label class="fs-4">Álbumes</label>
-            </div>
-            <div class="col-2 text-center">
-              <button type="button" class="my-1 btn btn-outline-primary btn-circle" (click)="irCrearAlbum()"><i class="bi bi-plus-lg"></i></button>
-            </div>
-          </div>
-        </div>
-        <div class="card-body">
+    <div class="row">
+        <div class="col-4">
 
-          <div class="input-group my-2">
-            <input #busqueda type="search" class="form-control" placeholder="Buscar álbumes" aria-label="Search" (keyup)="buscarAlbum(busqueda.value)">
-          </div>
+            <mat-card>
+                <mat-card-header>
+                    <mat-card-title>
+                        <div class="row">
+                            <div class="col-12 text-center mb-2">
+                                <label class="fs-4">Álbumes</label>
+                                <button type="button" class="my-1 btn btn-outline-primary btn-circle ms-3 me-2" (click)="irCrearAlbum()"><i class="bi bi-plus-lg"></i></button>
+                            </div>
+                        </div>
+                    </mat-card-title>
 
-          <table class="table table-hover mb-0" aria-describedby="colecName">
-            <tbody>
-                <tr *ngFor="let album of mostrarAlbumes; index as i" (click)="onSelect(album, i)" [ngClass]="{'selected': i === indiceSeleccionado}">
-                  <td >{{album.titulo}}</td>
-                  <td >{{album.anio}}</td>
-                </tr>
-            </tbody>
-          </table>
-          
+                </mat-card-header>
+
+                <mat-card-content>
+                    <div class="input-group my-2">
+                        <input #busqueda type="search" class="form-control" placeholder="Buscar álbumes" aria-label="Search" (keyup)="buscarAlbum(busqueda.value)">
+                    </div>
+
+                    <table mat-table [dataSource]="mostrarAlbumes" class="mat-elevation-z8" summary="Lista de albumes" aria-describedby="colecName">
+
+                        <ng-container matColumnDef="titulo">
+                            <th mat-header-cell *matHeaderCellDef scope="col"> Álbum </th>
+                            <td mat-cell *matCellDef="let element" scope="row"> {{element.titulo}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="anio">
+                            <th mat-header-cell *matHeaderCellDef scope="col"> Año </th>
+                            <td mat-cell *matCellDef="let element" scope="row"> {{element.anio}} </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;; let i = index" [ngClass]="{'selected': i === indiceSeleccionado}" (click)="onSelect(row,i)"></tr>
+
+                    </table>
+                </mat-card-content>
+
+
+
+            </mat-card>
+
+
         </div>
-      </div>
+        <div class="col-8">
+            <app-album-detail (deleteAlbum)="eliminarAlbum()" [album]="albumSeleccionado"></app-album-detail>
+        </div>
     </div>
-    <div class="col-8">
-      <app-album-detail (deleteAlbum)="eliminarAlbum()" [album]="albumSeleccionado"></app-album-detail>
-    </div>
-  </div>
 </div>
