--- a/front-end/tutorial-canciones/src/app/usuario/usuario-signup/usuario-signup.component.html
+++ b/front-end/tutorial-canciones/src/app/usuario/usuario-signup/usuario-signup.component.html
@@ -1,86 +1,78 @@
-<div class="container align-items-center">
-  <div class="row align-items-center">
-    <div class="col-xs-10 col-lg-5 card px-2 ">
-      <div class="card-body text-center">
-        <h2 class="my-2">Tutorial canciones</h2>
-        <p class="my-2">El sitio para almacenar la información de su colección de música. En este podrá buscar de manera más facil las canciones que tiene en su fonoteca y que quiere escuchar ...</p>
-      </div>
-    </div>
+<div fxLayout="row" fxLayoutAlign="center center" style="padding-top:100px;">
+    <mat-card fxFlex="35%">
+        <mat-card-title>Registro</mat-card-title>
 
-    <div class="col-xs-10 col-lg-5 container" >
-      <div class="row">
+        <mat-card-content fxLayout="column">
+            <form (ngSubmit)="registrarUsuario()" autocomplete="off" [formGroup]="usuarioForm">
 
-        <div class="my-2 row">
-          <h1 class="text-center">Registro</h1>
-        </div>
+                <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+                    <mat-form-field fxFlex="100" fxLayout.xs="column">
+                        <mat-label>Usuario</mat-label>
+                        <input matInput type="text" formControlName="nombre" placeholder="ejemplo@ejemplo.com" placeholder id="input_usuario">
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('nombre')?.hasError('required') && usuarioForm.get('nombre')?.touched">
+                    Debe ingresar un usuario para registrarse
+                </span>
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('nombre')?.hasError('maxlength')">
+                    El usuario no debe exceder los 50 carácteres
+                </span>
+                    </mat-form-field>
 
-        <form [formGroup]="usuarioForm" (ngSubmit)="registrarUsuario()">
+                </div>
 
-          <div class="form-group">
-            <div class="mb-3 row">
-              <label for="nombre" class="col-lg-3 col-form-label">Usuario</label>
-              <div class="col-lg-9  ">
-                <input formControlName="nombre" type="text" class="form-control" placeholder="ejemplo@ejemplo.com">
-              </div>
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('nombre')?.hasError('required') && usuarioForm.get('nombre')?.touched">
-              Debe ingresar un usuario para registrarse
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('nombre')?.hasError('maxlength')">
-              El usuario no debe exceder los 50 carácteres
-            </div>
-            
-          </div>
+                <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+                    <mat-form-field fxFlex="100" fxLayout.xs="column">
+                        <mat-label>Contraseña</mat-label>
+                        <input matInput type="password" formControlName="password" placeholder="*********" placeholder id="input_contrasena">
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('password')?.hasError('required') && usuarioForm.get('password')?.touched">
+                    Debe ingresar una contraseña para registrarse
+                </span>
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('password')?.hasError('maxlength')">
+                    La contraseña no debe exceder los 50 carácteres
+                </span>
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('password')?.hasError('minlength')">
+                    La contraseña debe tener más de 4 carácteres
+                </span>
+                    </mat-form-field>
 
-          <div class="form-group">
-            <div class="mb-3 row">
-              <label for="password" class="col-lg-3 col-form-label">Contraseña</label>
-              <div class="col-lg-9">
-                <input formControlName="password" type="password" class="form-control" placeholder="*********">
-              </div>
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('password')?.hasError('required') && usuarioForm.get('password')?.touched">
-              Debe ingresar una contraseña para registrarse
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('password')?.hasError('maxlength')">
-              La contraseña no debe exceder los 50 carácteres
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('password')?.hasError('minlength')">
-              La contraseña debe tener más de 4 carácteres
-            </div>
-          </div>
+                </div>
 
-          <div class="form-group">
-            <div class="mb-3 row">
-              <label for="confirmPassword" class="col-lg-3 col-form-label">Confirmar contraseña</label>
-              <div class="col-lg-9">
-                <input formControlName="confirmPassword"  type="password" class="form-control" placeholder="*********">
-              </div>
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('confirmPassword')?.hasError('required') && usuarioForm.get('confirmPassword')?.touched">
-              Debe ingresar una contraseña para registrarse
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('confirmPassword')?.hasError('maxlength')">
-              La contraseña no debe exceder los 50 carácteres
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('confirmPassword')?.hasError('minlength')">
-              La contraseña debe tener más de 4 carácteres
-            </div>
-            <div class="alert alert-danger my-3" *ngIf="usuarioForm.get('confirmPassword')?.value !== usuarioForm.get('password')?.value">
-              Las contraseñas no coinciden
-            </div>
-          </div>
+                <div fxLayout="row" fxLayout.xs="column" fxLayoutGap="20px">
+                    <mat-form-field fxFlex="100" fxLayout.xs="column">
+                        <mat-label>Confirmar contraseña</mat-label>
+                        <input matInput type="password" formControlName="confirmPassword" placeholder="*********" placeholder id="input_contrasena">
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('confirmPassword')?.hasError('required') && usuarioForm.get('confirmPassword')?.touched">
+                    Debe ingresar una contraseña para registrarse
+                  </span>
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('confirmPassword')?.hasError('maxlength')">
+                    La contraseña no debe exceder los 50 carácteres
+                  </span>
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('confirmPassword')?.hasError('minlength')">
+                    La contraseña debe tener más de 4 carácteres
+                  </span>
+                        <span class="form-text text-danger" *ngIf="usuarioForm.get('confirmPassword')?.value !== usuarioForm.get('password')?.value">
+                    Las contraseñas no coinciden
+                  </span>
+                    </mat-form-field>
 
-          <div class="col-12 text-center mt-3">
-            <button  type="submit" class="btn btn-primary col-8" [disabled]="!usuarioForm.valid || usuarioForm.get('confirmPassword')?.value !== usuarioForm.get('password')?.value">Registrarse</button>
-          </div>
-          <div class="col-12 text-center mt-2">
-            <p>¿Ya tienes cuenta? <a href="/">Inicia sesión</a></p>
-          </div>
+                </div>
 
-        </form>
-        
-      </div>
-    </div>
-  </div>
+                <br>
+
+                <div fxLayout class="button-row">
+                    <button mat-raised-button color="primary" type="submit" [disabled]="!usuarioForm.valid || usuarioForm.get('confirmPassword')?.value !== usuarioForm.get('password')?.value">
+                        <mat-icon>account_circle</mat-icon>
+                        Registrarse
+                    </button>
+
+                    <button mat-raised-button (click)="iniciarSesion()">
+                      <mat-icon>lock_open</mat-icon>
+                      ¿Ya tienes cuenta? Inicia sesión
+                  </button>
+                </div>
+
+            </form>
+        </mat-card-content>
+
+
+    </mat-card>
 </div>
