--- a/front-end/tutorial-canciones/src/app/app-home/home/home.component.html
+++ b/front-end/tutorial-canciones/src/app/app-home/home/home.component.html
@@ -29,17 +29,26 @@
             <mat-icon>menu</mat-icon>
         </button>
         <h3 style="text-align:center">
-            <img src="https://cdn.pixabay.com/photo/2017/04/19/10/24/vinyl-2241789_960_720.png" style="height:2rem;" alt="Fancollector" /> Ionic
+            <img src="https://cdn.pixabay.com/photo/2017/04/19/10/24/vinyl-2241789_960_720.png" style="height:2rem;" alt="IONIC" /> Ionic
         </h3>
-        <button id="btn_signup" routerLink="/" routerLinkActive="is-active" mat-button>Sobre nosotros</button>
+        <button id="btn_signup" routerLink="/" routerLinkActive="is-active" mat-button>
+            <mat-icon>home</mat-icon>
+            Sobre nosotros
+        </button>
         <span class="spacer"></span>
 
         <div fxShow="true" fxHide.lt-md="true">
 
             <!-- The following menu items will be hidden on both SM and XS screen sizes -->
             <span *ngIf="session.nombre" style="font-size: 14px;">{{session.nombre}}&nbsp; &nbsp; &nbsp;</span>
-            <button *ngIf="!session.nombre" id="btn_signin" routerLink="/auth/" routerLinkActive="is-active" mat-button>Ingresar</button>
-            <button *ngIf="!session.nombre" id="btn_signup" routerLink="/auth/signup" routerLinkActive="is-active" mat-button>Registrarse</button>
+            <button *ngIf="!session.nombre" id="btn_signup" routerLink="/auth/signup" routerLinkActive="is-active" mat-button>
+                <mat-icon>app_registration</mat-icon>
+                Registrarse
+            </button>
+            <button *ngIf="!session.nombre" id="btn_signin" routerLink="/auth/" routerLinkActive="is-active" mat-button>
+                <mat-icon>login</mat-icon>
+                Ingresar
+            </button>
             <a *ngIf="session.nombre">
                 <img src="/assets/images/notifications_active.png" alt="image">
             </a>
