--- a/front-end/tutorial-canciones/src/app/app-home/home/home.component.html
+++ b/front-end/tutorial-canciones/src/app/app-home/home/home.component.html
@@ -29,7 +29,7 @@
             <mat-icon>menu</mat-icon>
         </button>
         <h3 style="text-align:center">
-            <img src="https://cdn.pixabay.com/photo/2017/04/19/10/24/vinyl-2241789_960_720.png" style="height:2rem;" alt="IONIC" /> Ionic
+            <mat-icon>audiotrack</mat-icon>IONIC
         </h3>
         <button id="btn_signup" routerLink="/" routerLinkActive="is-active" mat-button>
             <mat-icon>home</mat-icon>
