--- a/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="1" *ngIf="!album; else divAlbum">
     <mat-grid-tile>
-        <mat-spinner></mat-spinner>
+        <<mat-spinner></mat-spinner>>
     </mat-grid-tile>
 </mat-grid-list>
 
