--- a/front-end/tutorial-canciones/src/styles.css
+++ b/front-end/tutorial-canciones/src/styles.css
@@ -35,5 +35,9 @@ table {
     color: white;
 }
 
+a {
+    color: #c2185b;
+}
+
 
 /* You can add global styles to this file, and also import other style files */
