--- a/front-end/tutorial-canciones/src/app/app-home/home/home.component.html
+++ b/front-end/tutorial-canciones/src/app/app-home/home/home.component.html
@@ -28,19 +28,22 @@
         <button mat-icon-button (click)="sidenav.toggle()" aria-label="menu" id="btn_menu" *ngIf="session.nombre">
             <mat-icon>menu</mat-icon>
         </button>
-        <h3 style="text-align:center">
-            <mat-icon>audiotrack</mat-icon>IONIC
-        </h3>
-        <button id="btn_signup" routerLink="/" routerLinkActive="is-active" mat-button>
-            <mat-icon>home</mat-icon>
-            Sobre nosotros
-        </button>
+        <div style="position: relative; width: 100%; height: 100%;">
+            <img src="/assets/images/logo-Ionic-blanco2.png" alt="image" width="80" height="50">
+        </div>
+
+
+
         <span class="spacer"></span>
 
-        <div fxShow="true" fxHide.lt-md="true">
+        <div fxShow="true" fxHide.lt-sm="true">
 
             <!-- The following menu items will be hidden on both SM and XS screen sizes -->
             <span *ngIf="session.nombre" style="font-size: 14px;">{{session.nombre}}&nbsp; &nbsp; &nbsp;</span>
+            <button id="btn_signup" routerLink="/" routerLinkActive="is-active" mat-button>
+                <mat-icon>home</mat-icon>
+                Sobre nosotros
+            </button>
             <button *ngIf="!session.nombre" id="btn_signup" routerLink="/auth/signup" routerLinkActive="is-active" mat-button>
                 <mat-icon>app_registration</mat-icon>
                 Registrarse
