--- a/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-detail/cancion-detail.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="1" *ngIf="!cancion; else divCancion">
     <mat-grid-tile>
-        <mat-spinner></mat-spinner>
+
     </mat-grid-tile>
 </mat-grid-list>
 
@@ -18,7 +18,7 @@
         <div class="col-6">
             <mat-card>
                 <mat-card-content>
-                    <p><span class="fw-bold">Duración: </span> <span class="text-capitalize">{{cancion?.minutos}}:{{cancion?.segundos}}</span></p>
+                    <p><span class="fw-bold">Duración: </span> <span class="text-capitalize">{{cancion?.minutos | duracion}}:{{cancion?.segundos | duracion }}</span></p>
                 </mat-card-content>
             </mat-card>
         </div>
