--- a/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
@@ -1,6 +1,6 @@
 <div class="container my-4">
-    <div class="row">
-        <div class="col-4">
+    <div fxFlex fxLayout="row" fxLayout.sm="column" fxLayout.xs="column">
+        <div fxFlex="35%" fxFlex.lt-lg="" style="padding-bottom: 5%;">
 
             <mat-card>
                 <mat-card-header>
@@ -29,7 +29,7 @@
 
                         <ng-container matColumnDef="duracion">
                             <th mat-header-cell *matHeaderCellDef scope="col"> Duración </th>
-                            <td mat-cell *matCellDef="let element" scope="row"> {{element.minutos}}:{{element.segundos}} </td>
+                            <td mat-cell *matCellDef="let element" scope="row"> {{element.minutos | duracion }}:{{element.segundos | duracion}} </td>
                         </ng-container>
 
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -42,7 +42,7 @@
 
 
         </div>
-        <div class="col-8">
+        <div fxFlex="65%" fxFlex.lt-lg="" style="padding-left: 5%;">
             <app-cancion-detail (deleteCancion)="eliminarCancion()" [cancion]="cancionSeleccionada"></app-cancion-detail>
         </div>
     </div>
