--- a/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
@@ -10,6 +10,7 @@
         <div class="col-12 text-center mb-2">
             <label class="fs-4 fw-bold">Álbum: {{album?.titulo}} ({{album?.anio}})</label>
             <button *ngIf="album" type="button" class="btn btn-outline-success ms-3 me-2" (click)="goToEdit()" title="Editar álbum"><i class="bi bi-pencil-square"></i></button>
+            <button *ngIf="album" type="button" class="btn btn-outline-info me-2" (click)="openDialog()" title="Compartir álbum"><i class="bi bi-share"></i></button>
             <button *ngIf="album" type="button" class="btn btn-outline-info me-1 me-2" (click)="goToJoinCancion()" title="Agregar canción"><i class="bi bi-plus" ></i><i class="bi bi-music-note"></i></button>
             <button *ngIf="album" type="button" class="btn btn-outline-danger me-1" (click)="eliminarAlbum()" title="Eliminar álbum"><i class="bi bi-trash-fill"></i></button>
         </div>
@@ -75,5 +76,33 @@
             </table>
         </div>
 
+    </div>
+
+    <div class="row">
+
+        <div class="col-12 mt-3 mb-2 ms-2">
+            <h2>Compartido con</h2>
+        </div>
+
+        <div class="col-12">
+            <table mat-table [dataSource]="album.compartidos" class="mat-elevation-z8" *ngIf="album.compartidos.length > 0" summary="Lista de usuarios">
+a
+                <!-- Position Column -->
+                <ng-container matColumnDef="index">
+                    <th mat-header-cell *matHeaderCellDef scope="col"> No. </th>
+                    <td mat-cell *matCellDef="let element; let i = index;" scope="row"> {{i + 1}} </td>
+                </ng-container>
+
+                <!-- Name Column -->
+                <ng-container matColumnDef="nombre">
+                    <th mat-header-cell *matHeaderCellDef scope="col"> Usuario </th>
+                    <td mat-cell *matCellDef="let element" scope="row"> {{ element.nombre }} </td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumnsCompartidos"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumnsCompartidos;; let i = index"></tr>
+
+            </table>
+        </div>
     </div>
 </ng-template>
