--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
@@ -32,6 +32,13 @@
                             <td mat-cell *matCellDef="let element" scope="row"> {{element.anio}} </td>
                         </ng-container>
 
+                        <ng-container matColumnDef="share">
+                            <th mat-header-cell *matHeaderCellDef scope="col">  </th>
+                            <td mat-cell *matCellDef="let element" scope="row">
+                                <button type="button" class="btn btn-outline-info me-2" (click)="openDialog(element)" title="Compartir álbum"><i class="bi bi-share"></i></button>
+                            </td>
+                        </ng-container>
+
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;; let i = index" [ngClass]="{'selected': i === indiceSeleccionado}" (click)="onSelect(row,i)"></tr>
 
