Agregando albumes compartidos a listado

--- a/front-end/tutorial-canciones/src/app/app-home/home/home.component.html
+++ b/front-end/tutorial-canciones/src/app/app-home/home/home.component.html
@@ -67,8 +67,8 @@
     </mat-toolbar>
 
 
-    <div class="container">
-        <router-outlet></router-outlet>
+    <div class="container" style="padding-bottom:100px;">
+        <router-outlet cdkScrollable></router-outlet>
     </div>
 
     <app-footer></app-footer>
