--- a/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-list/album-list.component.html
@@ -23,8 +23,12 @@
                     <table mat-table [dataSource]="mostrarAlbumes" class="mat-elevation-z8" summary="Lista de albumes" aria-describedby="colecName">
 
                         <ng-container matColumnDef="titulo">
-                            <th mat-header-cell *matHeaderCellDef scope="col"> Álbum </th>
-                            <td mat-cell *matCellDef="let element" scope="row"> {{element.titulo}} </td>
+
+                            <th mat-header-cell *matHeaderCellDef scope="col">
+                                Álbum </th>
+                            <td mat-cell *matCellDef="let element" scope="row">
+                                <mat-icon *ngIf="element.descripcion === 'False'">send</mat-icon>
+                                {{element.titulo}} </td>
                         </ng-container>
 
                         <ng-container matColumnDef="anio">
@@ -35,7 +39,7 @@
                         <ng-container matColumnDef="share">
                             <th mat-header-cell *matHeaderCellDef scope="col">  </th>
                             <td mat-cell *matCellDef="let element" scope="row">
-                                <button type="button" class="btn btn-outline-info me-2" (click)="openDialog(element)" title="Compartir álbum"><i class="bi bi-share"></i></button>
+                                <button *ngIf="element.descripcion === 'True'" type="button" class="btn btn-outline-info me-2" (click)="openDialog(element)" title="Compartir álbum"><i class="bi bi-share"></i></button>
                             </td>
                         </ng-container>
 
