--- a/front-end/tutorial-canciones/src/app/album/album-share/album-share.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-share/album-share.component.html
@@ -2,7 +2,7 @@
   <p>¿A quién le quieres compartir este álbum?</p>
   <mat-form-field appearance="fill">
     <mat-label>Escribe los nombres separados por comas</mat-label>
-    <input matInput [(ngModel)]="data.users_names">
+    <input matInput required [(ngModel)]="data.users_names">
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
