--- a/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
+++ b/front-end/tutorial-canciones/src/app/album/album-detail/album-detail.component.html
@@ -82,17 +82,17 @@
         </div>
 
         <div class="col-12">
-            <table mat-table [dataSource]="album.compartidos" class="mat-elevation-z8" *ngIf="album.compartidos.length > 0" summary="Lista de usuarios">
-a
+            <table mat-table [dataSource]="mostrarCompartidosAlbum" class="mat-elevation-z8" summary="Lista de usuarios" aria-describedby="colecName">
+
                 <!-- Position Column -->
-                <ng-container matColumnDef="index">
+                <!-- <ng-container matColumnDef="index">
                     <th mat-header-cell *matHeaderCellDef scope="col"> No. </th>
                     <td mat-cell *matCellDef="let element; let i = index;" scope="row"> {{i + 1}} </td>
-                </ng-container>
+                </ng-container> -->
 
                 <!-- Name Column -->
                 <ng-container matColumnDef="nombre">
-                    <th mat-header-cell *matHeaderCellDef scope="col"> Usuario </th>
+                    <th mat-header-cell *matHeaderCellDef scope="col"> Usuarios </th>
                     <td mat-cell *matCellDef="let element" scope="row"> {{ element.nombre }} </td>
                 </ng-container>
 
