--- a/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
+++ b/front-end/tutorial-canciones/src/app/cancion/cancion-list/cancion-list.component.html
@@ -25,7 +25,7 @@
                         <ng-container matColumnDef="titulo">
                             <th mat-header-cell *matHeaderCellDef scope="col"> Canción </th>
                             <td mat-cell *matCellDef="let element" scope="row">
-                            <mat-icon *ngIf="element.descripcion === 'False'">send</mat-icon>
+                            <mat-icon *ngIf="element.propia === 'False'">send</mat-icon>
                               {{element.titulo}} </td>
                         </ng-container>
 
@@ -37,7 +37,7 @@
                         <ng-container matColumnDef="share">
                           <th mat-header-cell *matHeaderCellDef scope="col"></th>
                           <td mat-cell *matCellDef="let element" scope="row">
-                              <button *ngIf="element.descripcion === 'True'" type="button" class="btn btn-outline-info me-2" (click)="openDialog(element)" title="Compartir canción"><i class="bi bi-share"></i></button>
+                              <button *ngIf="element.propia === 'True'" type="button" class="btn btn-outline-info me-2" (click)="openDialog(element)" title="Compartir canción"><i class="bi bi-share"></i></button>
                           </td>
                         </ng-container>
 
